[gd_scene load_steps=2 format=3 uid="uid://3abke745wp16"]

[ext_resource type="Script" path="res://SRC/contols.gd" id="1_soi05"]

[node name="Controls" type="Node2D"]
script = ExtResource("1_soi05")

[node name="Label" type="Label" parent="."]
offset_right = 203.0
offset_bottom = 23.0
text = "Player 1 Character Classes"

[node name="Button" type="Button" parent="."]
offset_left = 65.0
offset_top = 39.0
offset_right = 122.0
offset_bottom = 70.0
text = "Player"

[node name="Button2" type="Button" parent="."]
offset_left = 73.0
offset_top = 96.0
offset_right = 116.0
offset_bottom = 127.0
text = "Frog"

[node name="Label2" type="Label" parent="."]
offset_left = 227.0
offset_top = 1.0
offset_right = 430.0
offset_bottom = 24.0
text = "Player 2 Character Classes"

[node name="Button3" type="Button" parent="."]
offset_left = 292.0
offset_top = 40.0
offset_right = 349.0
offset_bottom = 71.0
text = "Player"

[node name="Button4" type="Button" parent="."]
offset_left = 300.0
offset_top = 97.0
offset_right = 343.0
offset_bottom = 128.0
text = "Frog"

[node name="Button5" type="Button" parent="."]
offset_left = 194.0
offset_top = 170.0
offset_right = 253.0
offset_bottom = 201.0
text = "Start"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
